feat: Add productServiceTest