@@ -12,13 +12,12 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.shop.customer.domain.products.dto.CategoryLowestPriceResponse.*;
 import static com.shop.customer.domain.products.dto.CategoryPriceRangeResponse.*;
+import static java.util.stream.Collectors.toMap;
 
 @Service
 @RequiredArgsConstructor
@@ -28,67 +27,76 @@ public class ProductService {
 
     private final CategoryReadRepository categoryReadRepository;
 
+
     @Transactional(readOnly = true)
     public CategoryLowestPriceResponse getLowestPriceByCategory() {
-        List<Product> lowestPriceProducts = productReadRepository.findLowestPricedProductsByCategory();
+        List<Product> products = productReadRepository.findLowestPricedProductsByCategory();
 
-        Map<String, Product> uniqueLowestPriceProducts = lowestPriceProducts.stream()
-                .collect(Collectors.toMap(p -> p.getCategory().getName(), p -> p, (p1, p2) -> p1.getPrice() < p2.getPrice() ? p1 : p2));
+        Map<String, Product> lowestPriceProducts = products.stream()
+                .collect(toMap(
+                        p -> p.getCategory().getName(),
+                        p -> p,
+                        (p1, p2) -> p1.getPrice() < p2.getPrice() ? p1 : p2
+                ));
 
-        List<CategoryPriceInfo> categoryPriceInfos = uniqueLowestPriceProducts.values().stream()
+        List<CategoryPriceInfo> categoryPriceInfo = lowestPriceProducts.values()
+                .stream()
                 .map(p -> new CategoryPriceInfo(
                         p.getCategory().getName(),
                         p.getBrand().getName(),
                         p.getPrice()
-                )).collect(Collectors.toList());
+                )).toList();
 
-        int totalAmount = categoryPriceInfos.stream()
+        int totalAmount = categoryPriceInfo.stream()
                 .mapToInt(CategoryPriceInfo::getPrice)
                 .sum();
 
-        return new CategoryLowestPriceResponse(categoryPriceInfos, totalAmount);
+        return new CategoryLowestPriceResponse(categoryPriceInfo, totalAmount);
     }
 
+
     @Transactional(readOnly = true)
-    public LowestPriceResponse getLowestPriceByBrand() {
-        List<Object[]> result = productReadRepository.findLowestTotalPriceByBrand();
-        if (result.isEmpty()) {
+    public LowestPriceResponse getLowestPriceBrand() {
+        List<Object[]> lowestTotalPriceBrands = productReadRepository.findLowestTotalPriceByBrand();
+
+        if (lowestTotalPriceBrands.isEmpty()) {
             throw new RuntimeException("No brands found.");
         }
 
-        String lowestBrand = (String) result.get(0)[0];
-        int totalAmount = ((Number) result.get(0)[1]).intValue();
+        String brandName = (String) lowestTotalPriceBrands.get(0)[0];
+        int totalAmount = ((Number) lowestTotalPriceBrands.get(0)[1]).intValue();
 
-        List<Product> products = productReadRepository.findByBrandName(lowestBrand);
+        List<Product> products = productReadRepository.findByBrandName(brandName);
+
         List<BrandPriceInfo.CategoryPrice> categoryPrices = products.stream()
-                .map(p -> new BrandPriceInfo.CategoryPrice(p.getCategory().getName(), p.getPrice()))
-                .collect(Collectors.toList());
+                .map(p -> new BrandPriceInfo.CategoryPrice(
+                        p.getCategory().getName(),
+                        p.getPrice()
+                )).toList();
 
-        BrandPriceInfo brandPriceInfo = new BrandPriceInfo(lowestBrand, categoryPrices, totalAmount);
+        BrandPriceInfo brandPriceInfo = new BrandPriceInfo(brandName, categoryPrices, totalAmount);
 
         return new LowestPriceResponse(brandPriceInfo);
     }
 
     @Transactional(readOnly = true)
-    public CategoryPriceRangeResponse getPriceRangeByCategory(String categoryName) {
+    public CategoryPriceRangeResponse getPriceRangeByCategoryName(String categoryName) {
+
         Category category = categoryReadRepository.findByName(categoryName)
-                .orElseThrow(() -> new RuntimeException("Category not found: " + categoryName));
+                .orElseThrow(() -> new IllegalArgumentException("Category not found: " + categoryName));
 
         List<Product> lowestPriceProducts = productReadRepository.findLowestPricedProductsByCategoryName(categoryName);
         List<Product> highestPriceProducts = productReadRepository.findHighestPricedProductsByCategoryName(categoryName);
 
-        List<PriceInfo> lowestPriceInfo = lowestPriceProducts.stream()
-                .map(p -> new PriceInfo(
-                        p.getBrand().getName(),
-                        p.getPrice()
-                )).toList();
-
-        List<PriceInfo> highestPriceInfo = highestPriceProducts.stream()
-                .map(p -> new PriceInfo(
-                        p.getBrand().getName(),
-                        p.getPrice()
-                )).toList();
+        List<PriceInfo> lowestPriceInfo = toPriceInfo(lowestPriceProducts);
+        List<PriceInfo> highestPriceInfo = toPriceInfo(highestPriceProducts);
 
         return new CategoryPriceRangeResponse(category.getName(), lowestPriceInfo, highestPriceInfo);
+    }
+
+    private List<PriceInfo> toPriceInfo(List<Product> lowestPriceProducts) {
+        return lowestPriceProducts.stream()
+                .map(p -> new PriceInfo(p.getBrand().getName(), p.getPrice()))
+                .toList();
     }
 }
